--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,3 +3,27 @@
   width: 100%;
   margin: 0 auto;
 }
+
+.header {
+  position: fixed;
+  right: 60px;
+  top: 30px;
+}
+
+.nav {
+  text-align: right;
+}
+
+.navLink {
+  display: block;
+  font-size: 16px;
+}
+
+.navLink + .navLink {
+  margin-top: 16px;
+}
+
+.finger {
+  position: fixed;
+  right: 0;
+}
